Se realizan cambios importantes de acuerdo al curso de patrones de composicion y de render

--- a/src/App/AppUI.css
+++ b/src/App/AppUI.css
@@ -1,6 +1,7 @@
-.pInformativoError, .pInformativoLoading, .pInformativo
+.pInformativoError, .pInformativoLoading, .pInformativo, .pInformativoResults
 {
     text-align: center;
     color: #61dafa;
     font-weight: bold;
+    font-size: 20px;
 }
